--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
     <i class="icons-foot fab fa-twitter"></i>
     <i class="icons-foot fab fa-facebook-f"></i>
     <i class="icons-foot far fa-envelope"></i>
-    <p>© Copyright 2018 TinDog</p>
+    <p>© Copyright 2020 TinDog by GHANA</p>
 
   </footer>
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
